--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -769,6 +769,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 
     background: none;
     border-radius: 10px;
@@ -804,6 +805,7 @@
     height: 40px;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     color: #000;
 
