--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -90,7 +90,7 @@
     height: 1.5rem;
 }
 
-.menuAddName form {
+.menuAddName div {
     display: flex;
     width: 100%;
     height: 36px;
@@ -102,7 +102,7 @@
     border: 2px solid #000;
 }
 
-.menuAddName form input {
+.menuAddName div input {
     width: 100%;
     height: 32px;
     border: none;
@@ -116,7 +116,7 @@
     line-height: normal;
 }
 
-.menuAddName form button {
+.menuAddName div button {
     display: flex;
     width: 36px;
     height: 36px;
@@ -125,7 +125,7 @@
     border: none;
 }
 
-.menuAddName form button img {
+.menuAddName div button img {
     width: 2rem;
     height: 2rem;
 }
@@ -166,7 +166,7 @@
     line-height: normal;
 }
 
-.columnsCol form {
+.columnsCol div {
     display: flex;
     /* width: 100%; */
     height: 36px;
@@ -178,7 +178,7 @@
     border: 2px solid #000;
 }
 
-.columnsCol form input {
+.columnsCol div input {
     width: 100%;
     height: 32px;
     border: none;
@@ -192,7 +192,7 @@
     line-height: normal;
 }
 
-.columnsCol form button {
+.columnsCol div button {
     display: flex;
     width: 36px;
     height: 36px;
@@ -203,7 +203,7 @@
     cursor: pointer;
 }
 
-.columnsCol form button img {
+.columnsCol div button img {
     width: 2rem;
     height: 2rem;
 }
@@ -342,7 +342,7 @@
     flex-direction: row;
     width: 100%;
     height: 18px;
-    gap: 15px;
+    gap: 8px;
     align-items: flex-start;
 }
 
@@ -375,7 +375,7 @@
 
 .roleProjRoleBoxRole {
     display: flex;
-    width: 70%;
+    width: 80%;
     height: 18px;
     flex-direction: column;
     justify-content: center;
@@ -383,7 +383,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -402,7 +402,7 @@
 
 .roleProjRojBoxProj {
     display: flex;
-    width: 66.83%;
+    width: 64.3%;
     height: 15px;
     flex-direction: column;
     justify-content: center;
@@ -410,7 +410,7 @@
     color: #000;
     
     font-family: 'Inter', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -769,6 +769,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 
     background: none;
     border-radius: 10px;
@@ -804,6 +805,7 @@
     height: 40px;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 
     color: #000;
 
@@ -1121,8 +1123,8 @@
 }
 
 .popUp {
-    width: 300px;
-    height: 140px;
+    width: 500px;
+    height: 180px;
     padding: 35px 4.5rem;
     flex-direction: row;
     align-items: flex-start;
@@ -1132,6 +1134,18 @@
     border-radius: 30px;
     border: 3px solid #000;
     background-color: #FFFFFF;
+}
+
+.popUpMask {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    position: fixed;
 }
 
 .popUpContent {
@@ -1145,7 +1159,7 @@
     color: #000;
 
     font-family: 'Inter', sans-serif;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
