--- a/web/cdc/src/components/Mentorship/mentorship.module.css
+++ b/web/cdc/src/components/Mentorship/mentorship.module.css
@@ -89,7 +89,15 @@
     border-radius: 10px;
     border: 2px solid #000;
 
+    cursor: pointer;
+
     background: none;
+    
+    transition: all 0.15s ease; 
+}
+
+.programsControlPanel button:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 .programsControlPanel button img {
@@ -114,7 +122,13 @@
     align-items: center;
 }
 
-.programsTableTitles p {
+.programsTableTitles div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.programsTableTitles div p, .titlesComplete {
     margin: 0;
     color: #000;
     font-family: 'Inter', sans-serif;
@@ -124,17 +138,52 @@
     line-height: normal;
 }
 
-.titlesMentor, .titlesMentee {
-    width: 31.4%;
+.titlesComplete {
+    text-align: center;
+}
+
+.titlesMentor {
+    width: 33.7748%;
+}
+
+.titlesMentee {
+    width: 32.5828%;
 }
 
 .titlesStartDate, .titlesEndDate {
-    width: 8.33%;
+ width: 11.258%;
 }
 
 .titlesComplete {
-    width: 7.33%;
+    width: 8.4768%;
 }
+
+.programsTableTitles div button {
+    display: flex;
+    width: 3rem;
+    height: 3rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: none;
+    cursor: pointer;
+
+    transition: all 0.15s ease; 
+}
+
+.programsTableTitles div button:hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
+
+.programsTableTitles div button img {
+    width: 2rem;
+    height: 2rem;
+}
+
+
 
 .programsTableBody {
     display: flex;
@@ -196,13 +245,21 @@
 
     border: 0;
     background: none;
+
+    transition: all 0.15s ease; 
 }
 
 .programsTableBodyComplete img {
     width: 2rem;
     height: 2rem;
+    border-radius: 2rem;
+    
+    transition: all 0.15s ease; 
 }
 
+.programsTableBodyComplete :hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
 
 .blocksFreMen {
     display: flex;
@@ -283,9 +340,12 @@
     white-space: nowrap;
 }
 
-.blockMenteeByMentor {
+
+
+
+.freeMentees {
     display: flex;
-    width: 30%;
+    width: 25%;
     height: 200px;
     padding: 35px 50px;
     flex-direction: column;
@@ -296,22 +356,19 @@
     border: 3px solid #000;
 }
 
-.menteeByMentorHeading {
+.freeMenteesTitle {
+    margin: 0;
+    
     display: flex;
+
     width: 100%;
     height: 40px;
-    align-items: center;
-    justify-content: space-between;
-}
 
-.menteeByMentorHeading p {
-    margin: 0;
-    display: flex;
-    height: 3rem;
     flex-direction: column;
     justify-content: center;
+
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2.4rem;
     font-style: normal;
@@ -319,52 +376,7 @@
     line-height: normal;
 }
 
-.menteeByMentorHeading form {
-    display: flex;
-    width: 176px;
-    height: 40px;
-    align-items: center;
-    gap: 5px;
-    flex-shrink: 0;
-    border-radius: 50px;
-    border: 2px solid #000;
-}
-
-.menteeByMentorHeading form input {
-    width: 70%;
-    height: 100%;
-
-    color: #000;
-
-    font-family: 'Inter', sans-serif;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
-    margin-left: 10px;
-
-    border: 0;
-    background-color: transparent;
-    outline: none;
-}
-
-
-.menteeByMentorHeading form button {
-    display: flex;
-    width: 30px;
-    justify-content: center;
-    align-items: center;
-
-    border: 0;
-    background: none;
-}
-
-.menteeByMentorHeading form button img {
-    width: 2rem;
-    height: 2rem;
-}
-
-.mentorsByMenteeTable {
+.freeMenteesTable {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -377,7 +389,7 @@
     overflow-x: hidden;
 }
 
-.mentorsByMenteeTable li {
+.freeMenteesTable li {
     margin: 0;
 
     display: flex;
@@ -386,7 +398,7 @@
     align-items: center;
 }
 
-.mentorsByMenteeTable li div {
+.freeMenteesTable li div {
     width: 100%;
     height: 3rem;
 
