--- a/web/cdc/src/components/Teams/teams.module.css
+++ b/web/cdc/src/components/Teams/teams.module.css
@@ -74,6 +74,8 @@
     flex-shrink: 0;
 }
 
+
+
 .panelAddTeam {
     display: flex;
     width: 35.55%;
@@ -83,6 +85,8 @@
 }
 
 .panelAddTeam p {
+    margin: 0;
+
     color: #000;
 
     text-align: center;
@@ -105,6 +109,13 @@
     border: 2px solid #000;
 
     background: none;
+    cursor: pointer;
+
+    transition: all 0.15s ease; 
+}
+
+.panelAddTeamButton:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 .panelAddTeamButton img {
@@ -122,10 +133,8 @@
     flex-shrink: 0;
 }
 
-.switchAll {
+.switchActive {
     padding: 0;
-
-    width: 60px;
 
     color: #000;
 
@@ -140,10 +149,8 @@
     background: none;
 }
 
-.switchActive {
+.switchAll {
     padding: 0;
-
-    width: 120px;
 
     color: rgba(0, 0, 0, 0.50);
 
@@ -156,6 +163,12 @@
 
     border: 0;
     background: none;
+
+    transition: all 0.1s ease;
+}
+
+.switchAll:hover {
+    font-size: 2.4rem;
 }
 
 .teamsTable {
@@ -178,6 +191,7 @@
     /* padding: 6px 10px; */
     justify-content: space-between;
     align-items: center;
+    cursor:pointer;
 }
 
 .lilActive {
@@ -203,6 +217,7 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilLeader {
@@ -220,11 +235,12 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilCreation {
     display: flex;
-    width: 16.23%;
+    width: 27.9%;
     padding-left: 2.32%;
     align-items: center;
 
@@ -237,17 +253,27 @@
     line-height: normal;
 
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .lilInfo {
     display: flex;
-    width: 4.65%;
+    width: 2rem;
+    height: 2rem;
     justify-content: center;
     align-items: center;
 
     border: 0;
+    border-radius: 2rem;
     background: none;
+
+    transition: all 0.15s ease; 
 }
+
+.lilInfo:hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
+
 
 .lilInfo img {
     width: 2rem;
@@ -305,11 +331,9 @@
 
 .headingActivity {
     display: flex;
-    width: 21%;
-    padding: 10px 0px;
+    width: 26.111%;
     align-items: center;
     justify-content: space-between;
-    flex-shrink: 0;
 }
 
 .headingActivity p {
@@ -353,11 +377,11 @@
 
 .leacreLeader {
     display: flex;
-    width: 73%;
+    width: 70.621%;
 
     padding: 10px 0px;
     align-items: center;
-    gap: 12%;
+    justify-content: space-between;
 }
 
 .leacreLeader p {
@@ -372,6 +396,8 @@
 }
 
 .leacreLeaderName {
+    width: 75.2%;
+
     color: #000;
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
@@ -385,7 +411,7 @@
 
 .leacreCreated {
     display: flex;
-    width: 21.55%;
+    width: 26.553%;
     justify-content: space-between;
     align-items: center;
 }
@@ -393,7 +419,7 @@
 .leacreCreated p {
     margin: 0;
     display: flex;
-    width: 60.8%;
+    /* width: 60.8%; */
     height: 40px;
     flex-direction: column;
     justify-content: center;
@@ -434,7 +460,7 @@
 }
 
 .bodyDescriptionText {
-    width: 79.5%;
+    width: calc(82.485% - 2rem);
     height: 120px;
     padding-right: 2rem;
 
@@ -472,7 +498,7 @@
     margin: 0;
 
     display: flex;
-    width: 80%;
+    width: calc(82.485% - 2rem);
     height: 210px;
     flex-direction: column;
     justify-content: space-between;
@@ -540,11 +566,20 @@
 .lirRemove {
     display: flex;
     width: 2rem;
+    height: 2rem;
     justify-content: center;
     align-items: center;
 
     border: 0;
+    border-radius: 2rem;
     background: none;
+    cursor: pointer;
+
+    transition: all 0.15s ease;
+}
+
+.lirRemove:hover {
+    box-shadow: 0 0 5px 1px #808080;
 }
 
 .lirRemove img {
@@ -555,10 +590,9 @@
 .bodyUpdate {
     display: flex;
     width: 100%;
-    height: 30px;
-    justify-content: flex-start;
+    height: 60px;
+    justify-content: space-between;
     align-items: flex-start;
-    gap: 3%;
 }
 
 .bodyUpdate p {
@@ -575,9 +609,10 @@
 
 .bodyUpdateDate {
     display: flex;
-    width: 30%;
+    width: 82.485%;
+    height: 60px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
 
     color: #000;
@@ -611,7 +646,15 @@
     font-weight: 500;
     line-height: normal;
 
+    cursor: pointer;
+
     background: none;
+
+    transition: all 0.15s ease; 
+}
+
+.bodyButtons button:hover {
+    box-shadow: 0 0 5px 2px #808080;
 }
 
 
@@ -676,17 +719,79 @@
     margin-right: 5.2%;
 }
 
+.panelSearch {
+    display: flex;
+    width: calc(100% - 24px);
+    height: 36px;
+    padding: 0 10px;
+    align-items: center;
+    gap: 5px;
 
-@media screen and (max-width: 1750px) {
-    .headingActivity {
-        width: auto;
-        justify-content: none;
-        gap: 2rem
-    }
-
-    .leacreCreated {
-        width: auto;
-        gap: 2.6rem;
-    }
+    border-radius: 10px;
+    border: 2px solid #000;
 }
 
+.panelSearch input {
+    width: 100%;
+    height: 32px;
+    border: none;
+    outline: none;
+    padding: 0;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.panelSearch button {
+    display: flex;
+    width: 36px;
+    height: 36px;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    cursor: pointer;
+
+    background: none;
+}
+
+.panelSearch button img {
+    width: 2rem;
+    height: 2rem;
+}
+
+.tableButtons {
+    display: flex;
+    width: calc(100% - 40px);
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tableButtons button {
+    display: flex;
+    width: 29.268%;
+    height: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 10px;
+    border: 2px solid #000;
+    background: none;
+
+    cursor: pointer;
+
+    transition: all 0.15s ease; 
+}
+
+.tableButtons button:hover {
+    box-shadow: 0 0 5px 1px #808080;
+}
+
+.tableButtons button img {
+    width: 2rem;
+    height: 2rem;
+}
