--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -1365,3 +1365,19 @@
     padding-bottom: 20px;
 
 }
+
+.lPartHeadingNameInput {
+    display: flex;
+    /* width: 250px; */
+    height: 40px;
+    flex-direction: column;
+    justify-content: center;
+    color: #000;
+    border : 0px;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal
+}
