--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -18,7 +18,7 @@
 .wrapperBodyContainerTitle {
     margin: 0;
     width: 100%;
-    
+
     color: #000;
     text-align: left;
     font-family: 'Inter', sans-serif;
@@ -140,7 +140,7 @@
     display: flex;
     flex-direction: column;
     width: 49.418%;
-    gap: 5px;    
+    gap: 5px;
 }
 
 .columnsCol select {
@@ -306,7 +306,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .menuListBlockList li button {
@@ -356,14 +356,15 @@
     flex-shrink: 0;
 }
 
-.listLiInfoRoleProjRoleBox p, .listLiInfoRoleProjProjBox p {
+.listLiInfoRoleProjRoleBox p,
+.listLiInfoRoleProjProjBox p {
     margin: 0;
 
     display: flex;
     height: 18px;
     flex-direction: column;
     justify-content: center;
-    
+
     color: #000;
 
     font-family: 'Inter', sans-serif;
@@ -381,7 +382,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.4rem;
     font-style: normal;
@@ -408,7 +409,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.4rem;
     font-style: normal;
@@ -513,7 +514,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -539,7 +540,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.8rem;
     font-style: normal;
@@ -569,7 +570,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -586,7 +587,7 @@
     justify-content: flex-start;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -615,7 +616,9 @@
     line-height: normal;
 }
 
-.lPartInfoCol2DataPhoneNum, .lPartInfoCol2DataConnected, .lPartInfoCol2DataSeprvisor {
+.lPartInfoCol2DataPhoneNum,
+.lPartInfoCol2DataConnected,
+.lPartInfoCol2DataSeprvisor {
     display: flex;
     width: 100%;
     height: 30px;
@@ -623,13 +626,13 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.8rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    
+
     overflow: hidden;
     white-space: nowrap;
 }
@@ -699,7 +702,9 @@
     top: 0;
 }
 
-.rPartInfoActivity, .rPartInfoConnected, .rPartInfoFired {
+.rPartInfoActivity,
+.rPartInfoConnected,
+.rPartInfoFired {
     display: flex;
     width: 100%;
     height: 30px;
@@ -707,7 +712,10 @@
     align-items: center;
 }
 
-.rPartInfoActivity p, .rPartInfoConnected p, .rPartInfoFired p, .rPartInfoReason p {
+.rPartInfoActivity p,
+.rPartInfoConnected p,
+.rPartInfoFired p,
+.rPartInfoReason p {
     margin: 0;
 
     color: #000;
@@ -727,7 +735,8 @@
     background: #00CA4E;
 }
 
-.connectedDate, .firedDate {
+.connectedDate,
+.firedDate {
     color: #000;
 
     font-family: 'Inter', sans-serif;
@@ -773,7 +782,8 @@
     bottom: 0;
 }
 
-.buttonTeamsGroups, .buttonMentorship {
+.buttonTeamsGroups,
+.buttonMentorship {
     display: flex;
     width: 100%;
     height: 40px;
@@ -786,19 +796,22 @@
     border-radius: 10px;
     border: 2px solid #000;
 
-    transition: all 0.15s ease; 
+    transition: all 0.15s ease;
 }
 
-.buttonTeamsGroups:hover, .buttonMentorship:hover {
+.buttonTeamsGroups:hover,
+.buttonMentorship:hover {
     box-shadow: 0 0 5px 1px #808080;
 }
 
-.buttonTeamsGroups img, .buttonMentorship img {
+.buttonTeamsGroups img,
+.buttonMentorship img {
     width: 2rem;
     height: 2rem;
 }
 
-.buttonTeamsGroups p, .buttonMentorship p {
+.buttonTeamsGroups p,
+.buttonMentorship p {
     margin: 0;
 
     color: #000;
@@ -829,8 +842,8 @@
     background: none;
     border-radius: 10px;
     border: 2px solid #000;
-    
-    transition: all 0.15s ease; 
+
+    transition: all 0.15s ease;
 }
 
 .buttonEdit:hover {
@@ -882,7 +895,7 @@
     align-items: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -898,7 +911,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -915,7 +928,8 @@
     gap: 15px;
 }
 
-.teamGroupsBlockDataTeam, .teamGroupsBlockDataLeader {
+.teamGroupsBlockDataTeam,
+.teamGroupsBlockDataLeader {
     display: flex;
     width: 100%;
     height: 30px;
@@ -923,7 +937,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.8rem;
     font-style: normal;
@@ -945,7 +959,7 @@
     align-items: flex-start;
 
     overflow: scroll;
-    overflow-x: hidden; 
+    overflow-x: hidden;
 }
 
 .teamGroupsBlockDataGroups li {
@@ -1020,7 +1034,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -1056,7 +1070,7 @@
     justify-content: center;
     flex-shrink: 0;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
@@ -1072,14 +1086,16 @@
     gap: 15px;
 }
 
-.roleMentee, .roleMentor, .mentorName {
+.roleMentee,
+.roleMentor,
+.mentorName {
     display: flex;
     width: 100%;
     height: 30px;
     flex-direction: column;
     justify-content: center;
     color: #000;
-    
+
     font-family: 'Inter', sans-serif;
     font-size: 1.8rem;
     font-style: normal;
@@ -1293,22 +1309,24 @@
     margin-right: 5.2%;
 }
 
-.lPartInfoCol1Data input, .lPartInfoCol2Data input, .lPartInfoCol1Data select {
+.lPartInfoCol1Data input,
+.lPartInfoCol2Data input,
+.lPartInfoCol1Data select {
     width: 100%;
     height: 28px;
     border: 0px;
     outline: none;
     padding: 0;
-    padding-left: 10px;
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
-    color : #000;
+    color: #000;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
 }
 
-.InputField, .addUserBlock button {
+.InputField,
+.addUserBlock button {
     width: 50%;
     height: 28px;
     border: 2px #000 solid;
@@ -1366,6 +1384,22 @@
 
 }
 
+.addUserBlockTitle {
+    margin-left: 50%;
+    align-items: center;
+    justify-content: right;
+    width: 100%;
+    height: 28px;
+    outline: none;
+    padding: 0;
+    padding-left: 10px;
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
 .lPartHeadingNameInput {
     display: flex;
     /* width: 250px; */
@@ -1373,7 +1407,7 @@
     flex-direction: column;
     justify-content: center;
     color: #000;
-    border : 0px;
+    border: 0px;
 
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
@@ -1381,3 +1415,4 @@
     font-weight: 300;
     line-height: normal
 }
+
