--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -1449,6 +1449,52 @@
     gap: 10px;
 }
 
+.addUserBlockBottom {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-items: right;
+
+    margin-left: 30px;
+    margin-right: 30px;
+    gap: 40px;
+}
+
+.addUserBlockBottom div p {
+    display: flex;
+    color: #33e629;
+    height: 34px;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.addUserBlockBottomButton {
+    display: flex;
+    flex-grow: 1;
+    height: 40px;
+    align-self: center;
+    cursor: pointer;
+
+    background: none;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    transition: all 0.15s ease;
+}
+
 .lPartHeadingNameInput {
     display: flex;
     /* width: 250px; */
