--- a/web/cdc/src/components/Employees/employees.module.css
+++ b/web/cdc/src/components/Employees/employees.module.css
@@ -1150,8 +1150,8 @@
 }
 
 .popUp {
-    width: 500px;
-    height: 180px;
+    width: 520px;
+    height: 220px;
     padding: 35px 4.5rem;
     flex-direction: row;
     align-items: flex-start;
@@ -1177,12 +1177,13 @@
 
 .popUpContent {
     display: flex;
-    width: 100%;
+    width: 95%;
     height: 95%;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
     gap: 15px;
+    padding-right: 15px;
     color: #000;
 
     font-family: 'Inter', sans-serif;
@@ -1207,18 +1208,21 @@
     border: 2px solid #000;
 }
 
-.popUpContent form input {
-    width: 100%;
+.popUpContent input {
+    display: flex;
+    width: 96%;
     height: 32px;
-    border: none;
-    outline: none;
-    padding: 0;
+    padding: 5px;
+    margin: 5px;
 
     font-family: 'Inter', sans-serif;
     font-size: 2rem;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+
+    border-radius: 10px;
+    border: 2px solid #000;
 }
 
 .popUpButtons {
@@ -1443,6 +1447,52 @@
     margin-left: 20px;
     flex-direction: column;
     gap: 10px;
+}
+
+.addUserBlockBottom {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-items: right;
+
+    margin-left: 30px;
+    margin-right: 30px;
+    gap: 40px;
+}
+
+.addUserBlockBottom div p {
+    display: flex;
+    color: #33e629;
+    height: 34px;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+
+.addUserBlockBottomButton {
+    display: flex;
+    flex-grow: 1;
+    height: 40px;
+    align-self: center;
+    cursor: pointer;
+
+    background: none;
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 2px solid #000;
+
+    font-family: 'Inter', sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+
+    transition: all 0.15s ease;
 }
 
 .lPartHeadingNameInput {
